--- a/templates/checker.html
+++ b/templates/checker.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <title>Gateway Selector</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+
 </head>
 <body>
 
@@ -235,3 +236,4 @@
 
 </body>
 </html>
+
