--- a/templates/checker.html
+++ b/templates/checker.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Gateway Selector</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -247,3 +247,4 @@
 
 </body>
 </html>
+
