--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="login-container">
-    <h1 class="logo-title">Kuriyaa <span>Chek</span></h1>
+    <h1 class="logo-title">Kuriyama <span>Chek</span></h1>
 
     {% with messages = get_flashed_messages(with_categories=true) %}
       {% if messages %}
@@ -37,3 +37,4 @@
   </div>
 </body>
 </html>
+
