--- a/templates/checker.html
+++ b/templates/checker.html
@@ -197,8 +197,8 @@
                 <option value="TEC">TEC</option>
                 <option value="RED">RED</option>
                 <option value="EM">EM</option>
-                <option value="PAY">UL</option>
-                <option value="UL">PAY</option>
+                <option value="PAY">PAY</option>
+                <option value="UL">UL</UL></option>
                 <option value="AMAZON">AMAZON</option>
             </select>
 
