--- a/templates/checker.html
+++ b/templates/checker.html
@@ -239,6 +239,7 @@
                 <option value="TEC">TEC</option>
                 <option value="RED">RED</option>
                 <option value="AN">AN</option>
+                <option value="CCS">CCS</option>
                 <option value="emovil">EVIL</option>
                 <option value="MD">MD</option>
                 <option value="EM">EM</option>
@@ -516,6 +517,7 @@
 
 </body>
 </html>
+
 
 
 
